@@ -208,6 +208,22 @@ static int http_template_initialize(struct template_db *db, struct configuration
 	return DC_OK;
 }
 
+static int http_template_shutdown(struct template_db *db)
+{
+	struct template_db_cache *dbdata = db->data;
+	struct template *t;
+
+	while (dbdata->templates != NULL)
+	{
+		t = dbdata->templates;
+		dbdata->templates = dbdata->templates->next;
+		t->next = NULL;
+		template_deref(t);
+	}
+
+	return DC_OK;
+}
+
 static int http_template_set(struct template_db *db, struct template *t)
 {
 	return DC_NOTIMPL;
@@ -276,6 +292,22 @@ static int http_question_initialize(struct question_db *db, struct configuration
 
 	dbdata->questions = NULL;
 	db->data = dbdata;
+
+	return DC_OK;
+}
+
+static int http_question_shutdown(struct question_db *db)
+{
+	struct question_db_cache *dbdata = db->data;
+	struct question *q;
+
+	while (dbdata->questions != NULL)
+	{
+		q = dbdata->questions;
+		dbdata->questions = dbdata->questions->next;
+		q->next = q->prev = NULL;
+		question_deref(q);
+	}
 
 	return DC_OK;
 }
@@ -363,6 +395,7 @@ static struct question *http_question_iterate(struct question_db *db,
 
 struct template_db_module debconf_template_db_module = {
     initialize: http_template_initialize,
+    shutdown: http_template_shutdown,
     set: http_template_set,
     get: http_template_get,
     remove: http_template_remove,
@@ -371,6 +404,7 @@ struct template_db_module debconf_template_db_module = {
 
 struct question_db_module debconf_question_db_module = {
     initialize: http_question_initialize,
+    shutdown: http_question_shutdown,
     set: http_question_set,
     get: http_question_get,
     disown: http_question_disown,
