@@ -16,6 +16,7 @@ cdebconf (0.117) UNRELEASED; urgency=low
   * Fix off-by-one error reading from confmodule (thanks, Baruch Even;
     closes: #430108).
   * Document proposed PROGRESS REGION command.
+  * Fix a bunch of reference-counting bugs and other memory leaks.
 
  -- Attilio Fiandrotti <attilio.fiandrotti@gmail.com>  Mon, 18 Jun 2007 15:35:11 +0200
 
